--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>SurveyWeb</title>
   </head>
   <body>
+    <div id="backdrop"></div>
     <div id="drawer"></div>
     <div id="root"></div>
     <!--
