--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <div id="backdrop"></div>
+    <div id="modal"></div>
     <div id="drawer"></div>
     <div id="root"></div>
     <!--
